src/components/ProjectCard/index.scss
.project-card {
    position: relative;
    color: white;
    display: flex;
    flex-direction: column;

    width: 300px;
    height: 300px;

    margin: 10px;
    
 
    .project-img {
        flex: 1;
        position: relative;
        display: flex;
        max-height: 50%;
        img {
            flex: 1;
            display: block;
            max-width: 100%;
            border-radius: 1rem 1rem 0 0;
            //aspect-ratio: 3/1.1;
            //object-fit: cover;
            
        }
    }
    .project-text {
        flex: 1;
        position: relative;

        .first-side {
            display: flex;
            flex-direction: column;
            height: 100%;
            transition: transform 0.5s;
            border-radius: 0 0 5px 5px;

            background-color: #16445d;
            backface-visibility: hidden;

            .project-desc {
                padding: 0 35px 0 1vh;
                flex: 3;


                .github-demo{
                    position:absolute;
                    font-size: 30px;
                    margin: 5px;
                    right: 0;
                    display: flex;
                    flex-direction: column;

                    a:visited{
                        color:inherit
                    }
                }
                
            }
            .bottom-card {
                display: flex;
                align-items: end;
                justify-content: space-between;

                .project-technologies {
                    display: flex;
                    flex-wrap: wrap;
                    align-items: center;
                    row-gap: 5px;
                    padding-bottom: 5px;

                    .project-technology {
                        display: flex;
                        align-items: center;
                        justify-content: center;
                        height: 25px;
                        font-weight: 450;
                        font-size: 15px;
                        padding: 0 2px;
                        margin: 0 2px;
                        border-radius: 15px;

                        img {
                            margin-right: 5px;
                            max-height: 80%;
                        }
                    }
                }
            }
        }

        .change-side {
            display: flex;
            justify-content: center;
            align-items: center;

            background-color: transparent;
            border: none;
            color: white;
            height: fit-content;
            font-size: 25px;
            padding-bottom: 5px;
            cursor: pointer;
        }

        .second-side {
            transform: rotateY(180deg);
            position: absolute;
            bottom: 0;
            height: 100%;
            display: flex;
            flex-direction: column;
            width: 100%;
            transition: transform 0.5s;
            background-color: #16445d;
            backface-visibility: hidden;
            overflow: auto;

            border-radius: 0 0 5px 5px;
           
            h2{
                margin-left: 2vh;
                margin-bottom: 0;

            }
            .list-wrapper{
                position: relative;
                height: 100%;
                display: flex;
                flex-direction: column;
                justify-content: space-between;

                li{
                    font-size: 12px;
                    font-weight: 350;
                    max-width: 200px;
                }
                
                .back{
                    position: relative;
                    bottom: 0;
                    margin-left: auto;
                    //left: 100%;
                    //transform: translate(-100%);
                }
            }

        }
    }
}
.project-card.active {
    .first-side {
        transform: rotateY(180deg);
    }
    .second-side {
        transform: rotateY(0deg);
    }
}

@media screen and (max-width: 1200px) {
    .project-card{
    
        height: 270px;
        width: 270px;

        .project-desc {
            h2{
                font-size: 15px;
            }
            h3{
                font-size: 12px;
            }

            .github-demo{
                margin-top: 10px !important;
                font-size: 22px !important;
            }
        }
        .project-technologies {
            padding-bottom: 5px;
            row-gap: 0 !important;
            .project-technology {
                height: 25px;
                font-weight: 450;
                font-size: 12px !important;
                padding: 0 !important;
                margin: 0 5px;
                border-radius: 15px;

                img {
                    margin-right: 5px;
                    max-height: 80%;
                }
            }
        }
    }
    
}

@media screen and (max-width: 900px) {
    // .project-card{
    
    //     height: 220px;
    //     width: 220px;
    // }
    
}

